<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jabber</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_add">Add</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="dob">Date of birth</string>
    <string name="nationality">Nationality</string>
    <string name="fullname">Full Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="TC_description">By ticking this, you agree with our terms and conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log Out</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="confirm">Confirm</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="report">Report</string>
    <string name="report_msg">"We are sorry that you encounter such problem.\nWe will attend to it ASAP."</string>
    <string name="hint_search">Search topics</string>
    
    
    
    <string name="privacy_policy_desc">"Privacy Policy
(Effective date: xx May 2015)

Welcome to Jabber! Jabber provides you with an opened and quick feedback platform where you can give or/and view feedback while remaining anonymous. Despite the anonymity, we prompt and urge users to embrace the cultural within the Feedie society, to be respectful to all and responsible for one’s own words. However,  Feedie’s administration team can still trace any user’s track and activities to ensure the abiding of the rules. Any defamation or verbal abusage reported will be put into investigation and be treated seriously. Feedie is obliged to assist in any legal investigation regarding users’ feedback by handling personal information of the parties involved to the legal parties to facilitate legal works.

INFORMATION WE COLLECT FROM YOU AND HOW IT IS USED

Information we collect from the users:

	•	User’s personal information used to register for a Jabber account (Ex: Email, password, name, gender and birth date)
	•	Any feedback posted on Jabber and label voted/opted
	•	Threads you added into your topicline
	•	Personal communication between you and Jabber via any communication channel used. (Ex: User verification, maintenance and security message, updates to feature of Jabber)

Note: Jabber uses analyzing software to measure traffic and trending topics according to any fields and information (Ex: birth date, gender) of users and activities of users without disclosing users’ identities.

Cookies: Jabber uses cookies to tracks users’ actions in order to collect information and indirect feedbacks on how Jabber’s features are being used.

Through collection of your information, we may:

	•	Note down email address and pre-enter for you thus you do not need to re-enter each time you log in.
	•	Help you access to information you added onto your topicline
	•	Measure traffics and analyze users’ tendencies.
	•	Contact you via email regarding to bug report and diagnosis.

PROTECTION OF YOUR INFORMATION

Under usual circumstances, Jabber is liable to conceal and protect users’ personal information included users’ email, password, name, etc. Jabber will not rent, share or sell users’ personal information to third parties outside Jabber. Nevertheless, Jabber will share and/or use users’ information under one circumstance: Jabber would be using users’ information only after partly or exclusively removing any identifiable parts of users’ info and combining them with the rest of anonymized data.

Recommendation feature on Jabber allows users to recommend places or products on social media. Jabber would like users to be informed that the recommendation feature shows only specifications of the places or products user recommended on other social media without displaying any other information or posts of the user. In some cases, your privacy setting may be affected due to changes in privacy and security setting of other social medias. Jabber does not take responsibility of changes in the structure of or the settings affected by other organizations or social media.

In addition, users are to take the of maintaining and not disclosing the secrecy of one’s password and information. Jabber advises users to keep their login password concealed to anyone at all times.

HOW WE STORE YOUR INFORMATION

TBA

CHILDREN POLICY

Jabber restricts users below the age of 15 to register an account in order to protect them from unknowingly verbally abuses. Jabber is an open platform for constructive feedbacks to be shared in public but in a respectful manner in the purpose of encouraging improvements of all. Jabber intends to minimalize the probability of having users being unable to act/react in a proper and respectful manner. If any users happen to find out any registration by any below the age of 15 at Jabber, please contact us immediately.  After the investigation taken to verify the validation of the report, if found true, Jabber will remove the said account and refrains the email from registering another account at Jabber after

THIRD PARTIES WEBSITE

Jabber will not take responsibility for any actions or any unofficial posted-ads on other websites that is linked directly or indirectly to Jabber. Our privacy policy applies only to Jabber apps but not any third parties website. In the case of discovering any frauds or counterfeits, please do not hesitate to contact us immediately.

CHANGES TO OUR PRIVACY POLICY

Jabber has the right to modify the privacy policy from time to time. Hence, Jabber would like to advise users to check the privacy policy regularly. Jabber would expect users entitling to modified privacy policy without informing users on purpose."</string>

    <string-array name="topics">
        <item>Topic 1</item>
        <item>Topic 2</item>
        <item>Topic 3</item>
        <item>Topic 4</item>
        <item>Topic 5</item>
        <item>Topic 6</item>
        <item>Topic 7</item>
        <item>Topic 8</item>
        <item>Topic 9</item>
        <item>Topic 10</item>
    </string-array>
    <string-array name="desc">
        <item>Sample descriptions</item>
        <item>Sample descriptions</item>
        <item>Sample descriptions</item>
        <item>Sample descriptions</item>
        <item>Sample descriptions</item>
        <item>Sample descriptions</item>
        <item>Sample descriptions</item>
        <item>Sample descriptions</item>
        <item>Sample descriptions</item>
        <item>Sample descriptions</item>
    </string-array>

    <array name="indicator">
        <item>@drawable/indicator_red</item>
        <item>@drawable/indicator_yellow</item>
        <item>@drawable/indicator_green</item>
    </array>

    <string name="dummy_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit
        amet nisi dolor. Vivamus et urna euismod, tristique velit euismod, ultrices libero. Interdum
        et malesuada fames ac ante ipsum primis in faucibus. In hac habitasse platea dictumst. Donec
        a interdum augue, vel vulputate magna. Donec a ultricies purus. Suspendisse eleifend risus
        non vulputate suscipit. Sed ullamcorper quis libero vitae faucibus. Etiam facilisis congue
        tortor ac facilisis. Sed egestas mauris vitae ligula suscipit feugiat. Vestibulum ac tellus
        vitae lacus commodo pharetra vel eu turpis. Aliquam erat volutpat. Sed ac ornare ex.
        Maecenas tristique massa at sapien blandit faucibus.</string>
    

</resources>