<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/edit_profile_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile" />

            <Button
                android:id="@+id/privacy_policy_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy" />

            <Button
                android:id="@+id/terms_of_service_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_service" />

            <Button
                android:id="@+id/about_us_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us" />

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out" />

            <Button
                android:id="@+id/report_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_a_problem" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>