<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="15dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        >

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Username"
                android:id="@+id/textView" />

        <org.droidparts.widget.ClearableEditText
                android:id="@+id/usernameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text" >

            <requestFocus />
        </org.droidparts.widget.ClearableEditText >


    </TableRow >

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_column="0" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Password"
                android:id="@+id/textView2" />

        <org.droidparts.widget.ClearableEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

    </TableRow >

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Confirm Password"
                android:id="@+id/textView3" />

        <org.droidparts.widget.ClearableEditText
                android:id="@+id/confirmPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

    </TableRow >

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Name"
                android:id="@+id/textView4" />

        <org.droidparts.widget.ClearableEditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fullname"
                android:inputType="textCapSentences|textPersonName" />


    </TableRow >

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Email"
                android:id="@+id/textView5" />

        <org.droidparts.widget.ClearableEditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

    </TableRow >

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Nationality"
                android:id="@+id/textView6"
                android:layout_gravity="center_vertical" />

        <Spinner >
            android:id="@+id/countrySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/countries_list">
        </Spinner >


    </TableRow >

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Gender"
                android:id="@+id/textView7" />

        <RadioGroup
                android:id="@+id/radioGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

            <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/male" />

            <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/female" />
        </RadioGroup >

    </TableRow >

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Date of Birth"
                android:id="@+id/textView8" />

        <Spinner
                android:id="@+id/daySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <Spinner
                android:id="@+id/monthSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <Spinner
                android:id="@+id/yearSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </TableRow >

    <View style="@style/ListDivider" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/terms_and_conditions" />


    <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TC_description" />

    <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

</TableLayout >